Fixed issue for smaller screens - modal now scrolls appropriately instead of flowing off-screen.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -52,7 +52,7 @@ ul {
 }
 
 .modal-pokeimage {
-    max-width:90%;
+    max-width:70%;
     position:relative;
 }
 
@@ -77,6 +77,7 @@ ul {
 .modal {
     width: 80%;
     max-width: 850px;
+    max-height: 80vh;
     position: relative;
     top: 40px;
     padding: 20px;
@@ -84,6 +85,8 @@ ul {
     z-index: 100;
     background-color: white;
     border: 1px solid black;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .modal div {
@@ -106,7 +109,7 @@ table {
 }
 
 .modal-dismiss {
-    position: absolute;
+    position: relative;
     width: 100%;
     bottom: 10px;
     text-align: center;
